chore: update root redirect fallback message

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     </script>
   </head>
   <body>
-    Redirecting to <a href="https://fernand.tech/">https://fernand.tech/</a>.
+    <p>Redirecting to <a href="https://fernand.tech/">fernand.tech</a>...</p>
+    <p>
+      If you are not redirected automatically, please click
+      <a href="https://fernand.tech/">fernand.tech</a>.
+    </p>
   </body>
 </html>
